Fix text alignment on one-col size

--- a/assets/sass/layout/_wrapper.scss
+++ b/assets/sass/layout/_wrapper.scss
@@ -452,7 +452,17 @@ $right-col-vw: 67vw;
         margin-bottom: 0;
 
         > header {
-          margin-bottom: 0;
+          padding-top: calc(2 * #{$pad});
+
+          > * {
+            max-width: 100%;
+          }
+
+          h1,
+          h2,
+          h3 {
+            margin-bottom: 0;
+          }
         }
 
         > .content {
